thursday with add cifar

--- a/scripts/preprocessing.ipynb
+++ b/scripts/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/INTEL/test/describe_1.csv', index_col=0)"
+    "train = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/datasets/CIFAR/test.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,23 +31,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "answers = {\n",
-    "    '(A)': 'buildings', \n",
-    "    '(B)': 'forest', \n",
-    "    '(C)': 'glacier', \n",
-    "    '(D)': 'mountain', \n",
-    "    '(E)': 'sea', \n",
-    "    '(F)': 'street'\n",
+    "    \"(A)\": 'airplane',\n",
+    "    \"(B)\": 'automobile',\n",
+    "    \"(C)\": 'bird',\n",
+    "    \"(D)\": 'cat',\n",
+    "    \"(E)\": 'deer',\n",
+    "    \"(F)\": 'dog',\n",
+    "    \"(G)\": 'frog',\n",
+    "    \"(H)\": 'horse',\n",
+    "    \"(I)\": 'ship',\n",
+    "    \"(J)\": 'truck',\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +70,15 @@
     "        idx['(E)'] = description.index('(E)')\n",
     "    if '(F)' in description:\n",
     "        idx['(F)'] = description.index('(F)')\n",
+    "    if '(G)' in description:\n",
+    "        idx['(G)'] = description.index('(G)')\n",
+    "    if '(H)' in description:\n",
+    "        idx['(H)'] = description.index('(H)')\n",
+    "    if '(I)' in description:\n",
+    "        idx['(I)'] = description.index('(I)')\n",
+    "    if '(J)' in description:\n",
+    "        idx['(J)'] = description.index('(J)')    \n",
+    "    \n",
     "    if len(idx) == 2 and is_first:\n",
     "        min_key = min(idx, key=idx.get)\n",
     "        # Return a dictionary with the key and its minimum value\n",
@@ -78,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_444344/3223177211.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1968904/3223177211.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -132,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_444344/2769801696.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1968904/2769801696.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -154,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_444344/502944615.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1968904/502944615.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -176,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_444344/330981100.py:23: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1968904/1638846304.py:35: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -221,22 +234,34 @@
     "# extract LLM labels from description\n",
     "def extract_by_label(description, is_first=False):\n",
     "    idx = {}\n",
-    "    if 'buildings' in description:\n",
-    "        idx['(A)'] = description.index('buildings')\n",
-    "    if 'forest' in description:\n",
-    "        idx['(B)'] = description.index('forest')\n",
-    "    if 'glacier' in description:\n",
-    "        idx['(C)'] = description.index('glacier')\n",
-    "    if 'mountain' in description:\n",
-    "        idx['(D)'] = description.index('mountain')  \n",
-    "    if 'sea' in description:\n",
-    "        idx['(E)'] = description.index('sea')\n",
-    "    if 'street' in description:\n",
-    "        idx['(F)'] = description.index('street')\n",
+    "    if 'airplane' in description:\n",
+    "        idx['(A)'] = description.index('airplane')\n",
+    "    if 'automobile' in description:\n",
+    "        idx['(B)'] = description.index('automobile')\n",
+    "    if 'bird' in description:\n",
+    "        idx['(C)'] = description.index('bird')\n",
+    "    if 'cat' in description:\n",
+    "        idx['(D)'] = description.index('cat')  \n",
+    "    if 'deer' in description:\n",
+    "        idx['(E)'] = description.index('deer')\n",
+    "    if 'dog' in description:\n",
+    "        idx['(F)'] = description.index('dog')\n",
+    "    if 'frog' in description:\n",
+    "        idx['(G)'] = description.index('frog')\n",
+    "    if 'horse' in description:\n",
+    "        idx['(H)'] = description.index('horse')\n",
+    "    if 'ship' in description:\n",
+    "        idx['(I)'] = description.index('ship')\n",
+    "    if 'truck' in description:\n",
+    "        idx['(J)'] = description.index('truck')    \n",
+    "        \n",
     "    if is_first:\n",
-    "        min_key = min(idx, key=idx.get)\n",
-    "        # Return a dictionary with the key and its minimum value\n",
-    "        return {min_key: idx[min_key]}\n",
+    "        try:\n",
+    "            min_key = min(idx, key=idx.get)\n",
+    "            # Return a dictionary with the key and its minimum value\n",
+    "            return {min_key: idx[min_key]}\n",
+    "        except:\n",
+    "            return ''\n",
     "\n",
     "    return idx   \n",
     "\n",
@@ -245,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_444344/502944615.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1968904/502944615.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -267,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,16 +308,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.874"
+       "llm_label\n",
+       "horse         1818\n",
+       "truck         1218\n",
+       "cat           1027\n",
+       "automobile    1015\n",
+       "airplane       952\n",
+       "dog            946\n",
+       "ship           876\n",
+       "bird           864\n",
+       "frog           718\n",
+       "deer           529\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.llm_label.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7561"
+      ]
+     },
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,12 +359,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save to csv\n",
-    "train.to_csv('test.csv')"
+    "train.to_csv('tested.csv')"
    ]
   }
  ],
