--- a/scripts/concat.ipynb
+++ b/scripts/concat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,47 +11,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "origin = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_1.csv', index_col=0)"
+    "origin = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/test/describe_1.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "error1 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_1.csv', index_col=0)\n",
-    "error2 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_2.csv', index_col=0)\n",
-    "error3 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_3.csv', index_col=0)\n",
-    "error4 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_4.csv', index_col=0)\n",
-    "error5 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_5.csv', index_col=0)\n",
-    "error6 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_6.csv', index_col=0)\n",
-    "error7 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_7.csv', index_col=0)"
+    "error1 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/test/describe_1.csv', index_col=0)\n",
+    "error2 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/test/describe_2.csv', index_col=0)\n",
+    "# error3 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_3.csv', index_col=0)\n",
+    "# error4 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_4.csv', index_col=0)\n",
+    "# error5 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_5.csv', index_col=0)\n",
+    "# error6 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_6.csv', index_col=0)\n",
+    "# error7 = pd.read_csv('/home/huy/Desktop/HCMUS/image_classification/description_data/CIFAR/describe_7.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# fill missing value from error1 to origin\n",
     "origin['description'] = origin['description'].fillna(error1['description'])\n",
     "origin['description'] = origin['description'].fillna(error2['description'])\n",
-    "origin['description'] = origin['description'].fillna(error3['description'])\n",
-    "origin['description'] = origin['description'].fillna(error4['description'])\n",
-    "origin['description'] = origin['description'].fillna(error5['description'])\n",
-    "origin['description'] = origin['description'].fillna(error6['description'])\n",
-    "origin['description'] = origin['description'].fillna(error7['description'])"
+    "# origin['description'] = origin['description'].fillna(error3['description'])\n",
+    "# origin['description'] = origin['description'].fillna(error4['description'])\n",
+    "# origin['description'] = origin['description'].fillna(error5['description'])\n",
+    "# origin['description'] = origin['description'].fillna(error6['description'])\n",
+    "# origin['description'] = origin['description'].fillna(error7['description'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "(0, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "origin.to_csv('/home/huy/Desktop/HCMUS/image_classification/datasets/CIFAR/train.csv')"
+    "origin.to_csv('/home/huy/Desktop/HCMUS/image_classification/datasets/CIFAR/test.csv')"
    ]
   }
  ],
